@@ -131,229 +131,6 @@ DESTROY(...)
 MODULE = SPVM::Data::Array		PACKAGE = SPVM::Data::Array
 
 SV*
-set_elements(...)
-  PPCODE:
-{
-  (void)RETVAL;
-  
-  SV* sv_array = ST(0);
-  SV* sv_values = ST(1);
-
-  // Environment
-  SPVM_ENV* env = SPVM_XS_UTIL_get_env();
-  SPVM_RUNTIME* runtime = (SPVM_RUNTIME*)env->get_runtime(env);
-
-  // Array must be SPVM::Data::Array object
-  if (!(SvROK(sv_array) && sv_derived_from(sv_array, "SPVM::Data::Array"))) {
-    croak("Array must be SPVM::Data::Array object)");
-  }
-
-  // Get object
-  SPVM_OBJECT* array = SPVM_XS_UTIL_get_object(sv_array);
-  
-  // Values must be array reference
-  if (!(SvROK(sv_values) && sv_derived_from(sv_values, "ARRAY"))) {
-    croak("Values must be array refenrece)");
-  }
-  
-  AV* av_values = (AV*)SvRV(sv_values);
-
-  int32_t length = env->get_array_length(env, array);
-
-  // Check length
-  if (av_len(av_values) + 1 != length) {
-    croak("Elements length must be same as array length)");
-  }
-  
-  int32_t array_basic_type_id  = array->basic_type_id;
-  int32_t array_type_dimension = array->type_dimension;
-  int32_t array_type_flag = array->type_flag;
-  int32_t is_array_type = SPVM_RUNTIME_API_is_array_type(env, array_basic_type_id, array_type_dimension, array_type_flag);
-  
-  if (is_array_type) {
-    SPVM_RUNTIME_BASIC_TYPE* basic_type = &runtime->basic_types[array_basic_type_id];
-    int32_t element_type_dimension = array_type_dimension - 1;
-    int32_t element_type_is_value_type = SPVM_RUNTIME_API_is_value_type(env, array_basic_type_id, element_type_dimension, 0);
-    int32_t element_type_is_object_type = SPVM_RUNTIME_API_is_object_type(env, array_basic_type_id, element_type_dimension, 0);
-    
-    if (element_type_is_value_type) {
-      for (int32_t index = 0; index < length; index++) {
-        SV** sv_value_ptr = av_fetch(av_values, index, 0);
-        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-
-        if (sv_derived_from(sv_value, "HASH")) {
-          
-          SPVM_RUNTIME_PACKAGE* package = &runtime->packages[basic_type->package_id];
-          assert(package);
-          
-          SPVM_RUNTIME_FIELD* first_field = SPVM_LIST_fetch(package->fields, 0);
-          assert(first_field);
-
-          void* elements = (void*)env->get_int_array_elements(env, array);
-          
-          HV* hv_value = (HV*)SvRV(sv_value);
-          int32_t field_length = package->fields->length;
-          for (int32_t field_index = 0; field_index < package->fields->length; field_index++) {
-            SPVM_RUNTIME_FIELD* field = SPVM_LIST_fetch(package->fields, field_index);
-            const char* field_name = runtime->symbols[field->name_id];
-
-            SV** sv_field_value_ptr = hv_fetch(hv_value, field_name, strlen(field_name), 0);
-            SV* sv_field_value;
-            if (sv_field_value_ptr) {
-              sv_field_value = *sv_field_value_ptr;
-            }
-            else {
-              sv_field_value = sv_2mortal(newSViv(0));
-            }
-
-            switch (first_field->basic_type_id) {
-              case SPVM_BASIC_TYPE_C_ID_BYTE: {
-                ((SPVM_VALUE_byte*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_byte)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_SHORT: {
-                ((SPVM_VALUE_short*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_short)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_INT: {
-                ((SPVM_VALUE_int*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_int)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_LONG: {
-                ((SPVM_VALUE_long*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_long)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_FLOAT: {
-                ((SPVM_VALUE_float*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_float)SvNV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_DOUBLE: {
-                ((SPVM_VALUE_double*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_double)SvNV(sv_field_value);
-                break;
-              }
-              default:
-                assert(0);
-            }
-          }
-        }
-        else {
-          croak("Element must be hash reference");
-        }
-      }
-    }
-    else if (element_type_is_object_type) {
-      for (int32_t index = 0; index < length; index++) {
-        SV** sv_value_ptr = av_fetch(av_values, index, 0);
-        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-        
-        if (!SvOK(sv_value)) {
-          env->set_object_array_element(env, array, index, NULL);
-        }
-        else if (sv_isobject(sv_value) && sv_derived_from(sv_value, "SPVM::Data")) {
-          SPVM_OBJECT* object = SPVM_XS_UTIL_get_object(sv_value);
-          
-          int32_t check_cast = env->check_cast(env, array_basic_type_id, element_type_dimension, object);
-          
-          if (check_cast) {
-            env->set_object_array_element(env, array, index, object);
-          }
-          else {
-            croak("Element must be cast");
-          }
-        }
-        else {
-          croak("Element must be SPVM::Data object");
-        }
-      }
-    }
-    else {
-      switch (array_basic_type_id) {
-        case SPVM_BASIC_TYPE_C_ID_BYTE: {
-          int8_t* elements = env->get_byte_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int8_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_SHORT: {
-          int16_t* elements = env->get_short_array_elements(env, array);
-
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int16_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_INT: {
-          int32_t* elements = env->get_int_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int32_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_LONG: {
-          int64_t* elements = env->get_long_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int64_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_FLOAT: {
-          float* elements = env->get_float_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (float)SvNV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_DOUBLE: {
-          double* elements = env->get_double_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (double)SvNV(sv_value);
-            }
-          }
-          break;
-        }
-        default:
-          croak("Invalid type");
-      }
-    }
-  }
-  else {
-    croak("Argument must be array type");
-  }
-  
-  XSRETURN(0);
-}
-
-SV*
 to_bin(...)
   PPCODE:
 {
